load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/GoogleCloudPlatform/testgrid
gazelle(name = "gazelle")

GAZELLE = "@bazel_gazelle//cmd/gazelle"

KAZEL = "@io_k8s_repo_infra//kazel"

GO = "@go_sdk//:bin/go"

sh_binary(
    name = "update-deps",
    srcs = ["update-deps.sh"],
    args = [
        "$(location %s)" % GO,
        "$(location %s)" % GAZELLE,
        "$(location %s)" % KAZEL,
        "$(location :update-bazel)",
    ],
    data = [
        GAZELLE,
        GO,
        KAZEL,
        ":update-bazel",
    ],
)

sh_binary(
    name = "update-bazel",
    srcs = ["update-bazel.sh"],
    args = [
        "$(location %s)" % GAZELLE,
        "$(location %s)" % KAZEL,
    ],
    data = [
        GAZELLE,
        KAZEL,
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//testgrid/cluster:all-srcs",
        "//testgrid/cmd/configurator:all-srcs",
        "//testgrid/cmd/entomologist:all-srcs",
        "//testgrid/cmd/summarizer:all-srcs",
        "//testgrid/cmd/updater:all-srcs",
        "//testgrid/config:all-srcs",
        "//testgrid/images:all-srcs",
        "//testgrid/issue_state:all-srcs",
        "//testgrid/metadata:all-srcs",
        "//testgrid/resultstore:all-srcs",
        "//testgrid/state:all-srcs",
        "//testgrid/summary:all-srcs",
        "//testgrid/util/gcs:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
