load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/GoogleCloudPlatform/testgrid
gazelle(name = "gazelle")

GAZELLE = "@bazel_gazelle//cmd/gazelle"

KAZEL = "@io_k8s_repo_infra//kazel"

GO = "@go_sdk//:bin/go"

sh_binary(
    name = "update-deps",
    srcs = ["update-deps.sh"],
    args = [
        "$(location %s)" % GO,
        "$(location %s)" % GAZELLE,
        "$(location %s)" % KAZEL,
        "$(location :update-bazel)",
    ],
    data = [
        GAZELLE,
        GO,
        KAZEL,
        ":update-bazel",
    ],
)

sh_binary(
    name = "update-bazel",
    srcs = ["update-bazel.sh"],
    args = [
        "$(location %s)" % GAZELLE,
        "$(location %s)" % KAZEL,
    ],
    data = [
        GAZELLE,
        KAZEL,
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"], exclude=["bazel-*/**", ".git/**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//cluster:all-srcs",
        "//cmd/configurator:all-srcs",
        "//cmd/entomologist:all-srcs",
        "//cmd/summarizer:all-srcs",
        "//cmd/updater:all-srcs",
        "//config:all-srcs",
        "//hack:all-srcs",
        "//images:all-srcs",
        "//issue_state:all-srcs",
        "//metadata:all-srcs",
        "//resultstore:all-srcs",
        "//state:all-srcs",
        "//summary:all-srcs",
        "//util/gcs:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
