load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("//prow:def.bzl", "prow_image")

# gazelle:prefix k8s.io/test-infra/testgrid/cmd/summarizer
gazelle(
    name = "gazelle",
)

prow_image(
    name = "image",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "summarizer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "server.go",
        "summarizer.go",
    ],
    importpath = "k8s.io/test-infra/testgrid/cmd/summarizer",
    visibility = ["//visibility:private"],
    deps = [
        "//summary:go_default_library",
        "@com_github_googlecloudplatform_testgrid//cmd/summarizer/response:go_default_library",
        "@com_github_googlecloudplatform_testgrid//cmd/summarizer/summary:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["summarizer_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//config:go_default_library",
        "//summary:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_googlecloudplatform_testgrid//cmd/summarizer/response:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//cmd/summarizer/example:all-srcs",
        "//cmd/summarizer/response:all-srcs",
        "//cmd/summarizer/summary:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
