load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    embed = [":response_go_proto"],
    importpath = "k8s.io/test-infra/testgrid/cmd/summarizer/response",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "response_proto",
    srcs = ["types.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//testgrid/config:config_proto",
        "//testgrid/summary:summary_proto",
    ],
)

go_proto_library(
    name = "response_go_proto",
    importpath = "k8s.io/test-infra/testgrid/cmd/summarizer/response",
    proto = ":response_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//testgrid/config:go_default_library",
        "//testgrid/summary:go_default_library",
    ],
)
