load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":summarizer_service_go_proto"],
    importpath = "k8s.io/test-infra/testgrid/cmd/summarizer/summary",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "summarizer_service_proto",
    srcs = ["summarizer_service.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//testgrid/cmd/summarizer/response:response_proto",
        "//testgrid/summary:summary_proto",
    ],
)

go_proto_library(
    name = "summarizer_service_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "k8s.io/test-infra/testgrid/cmd/summarizer/summary",
    proto = ":summarizer_service_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//testgrid/cmd/summarizer/response:go_default_library",
        "//testgrid/summary:go_default_library",
    ],
)
